# chi-housing-analysis

./: .gitignore  README.md  pyproject.toml
docs/: context.md  ols-assumption-map.md  outlier_methodology.md  project-brief.md  se-heteroskedasticity.md
notebooks/: 01_eda.ipynb  02_00_std_errors.ipynb  02_hedonic_regression.ipynb
src/chicago_housing/: __init__.py  config.py
src/chicago_housing/data/: clean.py  load.py
src/chicago_housing/features/: assemble.py  blocks.py  crime.py  derive.py  spatial.py
src/chicago_housing/models/: diagnostics.py  inference.py
tests/: test_blocks.py
